[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/net.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sfx/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sfx/Gotcha.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sfx/Hurt.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 30, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 43.9735 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 31.6667, 32.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 540, 720 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="Net" type="Area2D" parent="."]
position = Vector2( 0, -90 )

[node name="Net" type="Sprite" parent="Net"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="Net"]
shape = SubResource( 10 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.0266 )
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.833374 )
shape = SubResource( 11 )

[node name="Catchpos" type="Position2D" parent="."]
position = Vector2( 23.3333, -120 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Gotcha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.7

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.5

[connection signal="area_entered" from="Net" to="." method="_on_Net_area_entered"]
[connection signal="body_entered" from="Net" to="." method="_on_Net_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="finished" from="Hurt" to="." method="_on_Hurt_finished"]
